--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/more.css" />
     <link rel="shortcut icon" href="food.png" type="image/x-icon" />
     <title>My Food Blog</title>
     <style>
@@ -20,6 +21,9 @@
       }
       input[type="password"] {
         color: blueviolet;
+      }
+      ol {
+        border: 2px dotted;
       }
     </style>
   </head>
@@ -47,5 +51,24 @@
     <input type="text" placeholder="Write your mail" name="" id="" />
     <input type="password" placeholder="Your password" name="" id="" />
     <input type="submit" value="Submit" />
+    <br />
+    <br />
+    <div id="more">
+      <h2>More about Food</h2>
+      <p>
+        A food item paragraph describes a specific dish or food , often focusing
+        on its taste, texture, origin, and personal significance, using
+        descriptive sensory words to make it appealing, like describing beef
+        biryani as a rich, aromatic dish with tender meat and fragrant rice that
+        brings people together, or tangy street food fuska as a spicy, crunchy
+        snack popular for casual gatherings, highlighting how foods connect us
+        to culture and personal memories
+      </p>
+      <ol id="list">
+        <li>Biryani</li>
+        <li>Salad</li>
+        <li>Spanish Burger</li>
+      </ol>
+    </div>
   </body>
 </html>
